# NORP

./: Cargo.toml
data/: locations.json  norp.config.toml
src/: error.rs  lib.rs  location.rs  main.rs
