[package]
name = "norp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
text_io = "0.1.12"
thiserror = "1.0.32"
toml = "0.5.9"
